service-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-myapp
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
