ingress-default.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-default
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: service-myapp
          servicePort: 80
